--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,10 @@ dependencies {
     // точки onBoarding
     implementation 'com.tbuonomo:dotsindicator:4.2'
 
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
+    //lottie
+    implementation "com.airbnb.android:lottie:4.2.0"
 }
