--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,8 @@ dependencies {
 
     //lottie
     implementation "com.airbnb.android:lottie:4.2.0"
+
+    //room
+    implementation "androidx.room:room-runtime:2.3.0"
+    annotationProcessor "androidx.room:room-compiler:2.3.0"
 }
